Remove response bodies from PATCH routes
Sending back proper RESTful responses to these routes introduces
race conditions between the REST API and ledger sync. A proper
solution to this problem will likely require a "big" solution
including possibly some architectural changes. Insead, the RESTful
approach is being abandoned for these two routes, with simply
200 responses sent back instead of full resources.
